--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Register</title>
     <link rel="stylesheet" href="/static/style.css" />
+    <link rel="icon" type="image/svg+xml" href="/static/favicon.svg" />
   </head>
   <body>
     <div class="container auth-container">
